fix apt task, merge tasks into single stage to achieve parallel execution

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,13 @@
 ---
 before_script:
-  - apt-get install -yq  yamllint ansible-lint ansible
+  - sudo apt-get install -yq  yamllint ansible-lint ansible
   - ansible --version
   - ansible-lint --version
 
 jobs:
   include:
-    - stage: yaml linting
+    - stage: lint / syntax check
       script: yamllint .
-
-    - stage: ansible linting
       script: ansible-lint *.yml
-    
-    - stage: ansible syntax check
       script: ansible-playbook --inventory inventory --syntax-check *.yml
 
