--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 ---
 before_script:
+  - sudo apt-get update -q
   - sudo apt-get install -yq  yamllint ansible-lint ansible
   - ansible --version
   - ansible-lint --version
