Use pip instead, missing package only available from ubuntu 18+

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ dist: xenial
 
 before_script:
   - sudo apt-get update -q
-  - sudo apt-get install -q  yamllint ansible-lint ansible
+  - sudo apt-get install -q python-pip yamllint ansible
+  - pip install ansible-lint
   - ansible --version
   - ansible-lint --version
 
