--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: xenial
 cache:
  pip: true
  directories:
-   - /etc/ansible/roles
+   - .ansible/roles
 
 before_script:
   - sudo apt-get update -q
@@ -12,7 +12,6 @@ before_script:
   - ansible --version
   - ansible-lint --version
   - ansible-galaxy install -r .requirements.yml
-  - ls -lha /etc/ansible/roles || true
 
 jobs:
   include:
