--- a/group_vars/mal_admin_p.yml
+++ b/group_vars/mal_admin_p.yml
@@ -6,9 +6,9 @@ firewall_allowed_tcp_ports:
   - "443"
 firewall_additional_rules:
   # dummy rules
-  - "iptables -A INPUT -p tcp --dport 6379 -s 1.1.1.1 -j ACCEPT" #US
-  - "iptables -A INPUT -p tcp --dport 6379 -s 4.4.4.4 -j ACCEPT" #EU
-  - "iptables -A INPUT -p tcp --dport 6379 -s 8.8.8.8 -j ACCEPT" #ASIA
+  - "iptables -A INPUT -p tcp --dport 6379 -s 1.1.1.1 -j ACCEPT" # US
+  - "iptables -A INPUT -p tcp --dport 6379 -s 4.4.4.4 -j ACCEPT" # EU
+  - "iptables -A INPUT -p tcp --dport 6379 -s 8.8.8.8 -j ACCEPT" # ASIA
 
 # geerlingguy.php
 php_enable_php_fpm: true
@@ -23,7 +23,7 @@ certbot_auto_renew_user: "{{ ansible_user | default(lookup('env', 'USER')) }}"
 certbot_auto_renew_options: "--no-self-upgrade"
 certbot_admin_email: example@gmail.com
 certbot_certs:
-   - domains:
+  - domains:
       - www.malprave.corp
       - malprave.corp
 
@@ -56,7 +56,10 @@ nginx_extra_http_options: |
 
 nginx_remove_default_vhost: true
 nginx_server_tokens: "off"
-# modern profile from https://mozilla.github.io/server-side-tls/ssl-config-generator/
+ssl_ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AE128-SHA256"  # yamllint disable-line rule:line-length
+
+# modern profile from
+# mozilla.github.io/server-side-tls/ssl-config-generator/
 ssl_config: |
       ssl_certificate      /etc/letsencrypt/live/malprave.corp/fullchain.pem;
       ssl_certificate_key  /etc/letsencrypt/live/malprave.corp/privkey.pem;
@@ -70,7 +73,7 @@ ssl_config: |
 
       # Protocol/Cipher list
       ssl_protocols TLSv1.2;
-      ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
+      ssl_ciphers '{{ ssl_ciphers }}';
       ssl_prefer_server_ciphers on;
 
       # Buffer
@@ -86,7 +89,9 @@ ssl_config: |
       resolver 8.8.8.8 8.8.4.4 valid=300s;
       resolver_timeout 5s;
 
-- nginx_vhosts:
+nginx_static_list: "jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc"
+
+nginx_vhosts:
 
   - listen: "80"
     server_name: "www.malprave.corp malprave.corp"
@@ -126,7 +131,7 @@ ssl_config: |
       }
 
       # Media: images, icons, video, audio, HTC
-      location ~* \.(?:jpg|jpeg|gif|png|ico|cur|gz|svg|svgz|mp4|ogg|ogv|webm|htc)$ {
+      location ~* \.(?:{{ nginx_static_list }})$ {
         expires 1M;
         access_log off;
         add_header Cache-Control "public";
