--- a/ops/mongo/get_mongo_nodes.yml
+++ b/ops/mongo/get_mongo_nodes.yml
@@ -7,15 +7,19 @@
   when: item in groups["{{ from_cluster }}"]
   with_items: play_hosts
 
+- set_fact:
+    mongo_cmd: |
+      echo "db.runCommand( { isMaster: 1 } )" | LC_ALL=C mongo --quiet
+
 - block:
 
     - name: Query mongo instances and get master
-      shell: 'echo "db.runCommand( { isMaster: 1 } )" | LC_ALL=C mongo --quiet | grep primary | cut -d ''"'' -f 4 | cut -d ":" -f 1'
+      shell: '{{ mongo_cmd }} | grep primary | cut -d ''"'' -f 4 | cut -d ":" -f 1'  # yamllint disable-line rule:line-length
       register: output
 
     - set_fact:
-          to_mongo_master: "{{ hostvars[to_hosts[0]]['output']['stdout'] }}"
-      when: hostvars[to_hosts[0]]['output']['stdout'] == hostvars[item]['output']['stdout']
+        to_mongo_master: "{{ hostvars[to_hosts[0]]['output']['stdout'] }}"
+      when: hostvars[to_hosts[0]]['output']['stdout'] == hostvars[item]['output']['stdout']  # yamllint disable-line rule:line-length
       with_items: to_hosts
       delegate_to: localhost
       delegate_facts: True
@@ -25,19 +29,19 @@
 - block:
 
     - name: Query mongo instances and get master
-      shell: 'echo "db.runCommand( { isMaster: 1 } )" | LC_ALL=C mongo --quiet | grep primary | cut -d ''"'' -f 4 | cut -d ":" -f 1'
+      shell: '{{ mongo_cmd }} | grep primary | cut -d ''"'' -f 4 | cut -d ":" -f 1'  # yamllint disable-line rule:line-length
       register: output
 
-    # make sure all hosts report the same master
+    # Ensure all hosts report the same master
     # @HACK play hosts is deprecated - only available for 2.1
     - set_fact:
         from_mongo_master: "{{ hostvars[from_hosts[0]]['output']['stdout'] }}"
-      when: hostvars[from_hosts[0]]['output']['stdout'] == hostvars[item]['output']['stdout']
+      when: hostvars[from_hosts[0]]['output']['stdout'] == hostvars[item]['output']['stdout'] # yamllint disable-line rule:line-length
       with_items: from_hosts
       delegate_to: localhost
       delegate_facts: True
 
-    # assuming this one was defined to run the backups from
+    # Assuming first slave is configured to run daily backups
     - name: Get first slave
       set_fact:
         from_mongo_slave: "{{ item }}"
