--- a/ops/mongo/mongo_migration.yml
+++ b/ops/mongo/mongo_migration.yml
@@ -1,4 +1,4 @@
-"/root/{{ rsync_name }}"---
+---
 - name: Prep mongo servers for migration
   hosts:
     - "{{ from_cluster }}"
@@ -6,12 +6,12 @@
 
   vars:
     # SSH key names for rsync data
-    ssh_private_key: rsync-migration
+    ssh_private_key: /root/.ssh/rsync-migration
     ssh_public_key: rsync-migration.pub
     # Backup location
     mongo_dump_path: /var/mongo_dump
     # Temporarily allow root ssh login
-    ssh_permitrootlogin: 'yes' # or 'no'
+    ssh_permitrootlogin: 'yes'  # or 'no'
     # Rsync script file name
     rsync_name: rsync-donor-to-recipient
 
@@ -22,14 +22,16 @@
     - set_fact:
         from_mongo_master: "{{ hostvars['localhost']['from_mongo_master'] }}"
         from_mongo_slave: "{{ hostvars['localhost']['from_mongo_slave'] }}"
-        to_mongo_master:  "{{ hostvars['localhost']['to_mongo_master'] }}"
+        to_mongo_master: "{{ hostvars['localhost']['to_mongo_master'] }}"
       delegate_to: localhost
     # Use IP addresses instead of hostname
     # Host file is environemnt specific, won't be able to connect by hostname
     - set_fact:
-        from_mongo_master:  "{{ hostvars[from_mongo_master]['ansible_default_ipv4']['address'] }}"
-        from_mongo_slave:   "{{ hostvars[from_mongo_slave]['ansible_default_ipv4']['address'] }}"
-        to_mongo_master:  "{{ hostvars[to_mongo_master]['ansible_default_ipv4']['address'] }}"
+        # yamllint disable rule:line-length
+        from_mongo_master: "{{ hostvars[from_mongo_master]['ansible_default_ipv4']['address'] }}"
+        from_mongo_slave: "{{ hostvars[from_mongo_slave]['ansible_default_ipv4']['address'] }}"
+        to_mongo_master: "{{ hostvars[to_mongo_master]['ansible_default_ipv4']['address'] }}"
+        # yamllint enable rule:line-length
       delegate_to: localhost
 
     # Print IP addresses defined above
@@ -45,7 +47,8 @@
         var: from_mongo_master
       delegate_to: localhost
 
-    - name: Test SSH connectivity from SLAVE (backup node in donor cluster) to MASTER
+    # We plan to ship mongodump from donor cluster slave
+    - name: Test SSH connectivity from SLAVE (donor cluster) to MASTER
       wait_for:
         host: "{{ to_mongo_master }}"
         port: 22
@@ -63,14 +66,14 @@
       run_once: true
 
     - name: Generate ssh keypair for rsync migration
-      shell: "ssh-keygen -b 2048 -t rsa -f /root/.ssh/{{ ssh_private_key }} -q -N ''"
+      shell: "ssh-keygen -b 2048 -t rsa -f {{ ssh_private_key }} -q -N ''"
       args:
-        creates: "/root/.ssh/{{ ssh_private_key }}"
+        creates: "{{ ssh_private_key }}"
       delegate_to: "{{ from_mongo_slave }}"
       run_once: true
       become: True
 
-    - name: Get ssh_public_key to install authorized keyfile on from_mongo_master
+    - name: Get ssh pub key from donor slave
       shell: cat /root/.ssh/{{ ssh_public_key }}
       register: ssh_public_key_data
       delegate_to: "{{ from_mongo_slave }}"
@@ -92,14 +95,17 @@
           #!/bin/bash
           # dirs to sync across Environements
           for dir in {{ rsync_content_dirs.stdout_lines | join(' ') }}; do
-            time rsync -e "ssh -i $HOME/.ssh/rsync-migration" -av --stats --human-readable {{ mongo_dump_path }}/{{ item }} {{ to_mongo_master }}:{{ mongo_dump_path }}
+            time rsync -e "ssh -i {{ ssh_private_key }}" \
+            -av --stats --human-readable \
+            {{ mongo_dump_path }}/{{ item }} \
+            {{ to_mongo_master }}:{{ mongo_dump_path }}
           done
       delegate_to: "{{ from_mongo_slave }}"
       with_items: rsync_content_dirs.stdout_lines
       run_once: true
       become: True
 
-    - name: Configure authorized keys - Allow recipient to receive connection from donor host
+    - name: Configure pub key from donor slave in recipent
       authorized_key:
         user: root
         key: "{{ ssh_public_key_data.stdout }}"
