--- a/group_vars/mal_admin_p.yml
+++ b/group_vars/mal_admin_p.yml
@@ -56,7 +56,8 @@ nginx_extra_http_options: |
 
 nginx_remove_default_vhost: true
 nginx_server_tokens: "off"
-ssl_ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AE128-SHA256"  # yamllint disable-line rule:line-length
+# yamllint disable-line rule:line-length
+ssl_ciphers: "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AE128-SHA256"
 
 # modern profile from
 # mozilla.github.io/server-side-tls/ssl-config-generator/
