Name travis build stages, plus skip package retry error

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,12 @@ before_script:
 
 jobs:
  include:
-  - script: yamllint .
-  - script: ansible-lint *.yml
-  - script: ansible-playbook --inventory inventory --syntax-check *.yml
+
+  - name: YAML Lint
+    script: yamllint .
+
+  - name: Ansible Lint
+    script: ansible-lint *.yml
+
+  - name: Ansible Syntax Check
+    script: ansible-playbook --inventory inventory --syntax-check *.yml
