--- a/.requirements.yml
+++ b/.requirements.yml
@@ -6,3 +6,5 @@
 - src: angstwad.docker_ubuntu
 - src: geerlingguy.certbot
 - src: DavidWittman.redis
+- src: ansistrano.deploy 
+- src: ansistrano.rollback
